--- a/assets/styles/Style1.css
+++ b/assets/styles/Style1.css
@@ -2,38 +2,93 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 html{
-    background-color: #70cac0;
+    background: rgb(33,25,21);
+    background: linear-gradient(180deg, rgba(33,25,21,1) 5%, rgba(55,122,114,1) 13%, rgba(141,232,221,1) 100%);
+    background-attachment: fixed;
 }
 
+/* HEADER */
 
+.titulo{
+    /* TITULO */
+    color:#f8e12e;
+    font-size: 100px;
+    -webkit-text-stroke: 2px #c63939;
+    text-transform: uppercase;
+    padding-bottom: 240px;
+    /* FONDO */
+    background-image: url(../img/design1_image1.jpg);
+    background-size:cover;
+    background-position-y: -200px;
+}
 .logo{
-    height: 100px;
+    position: absolute;
+    top: 250px; 
+    left: 80%;
+    height: 200px;
     object-fit: contain;
     
 }
-h1{
-    
+h2{
+    background-color: black;
+    color:#f8e12e;
+    text-align: center;
+    padding: 10px;
+    text-transform: uppercase;
+}
+
+
+/* NAV */
+
+nav{
+    width: 150px;
+    display: block;
 }
 nav a{
+    color: #f8e12e;
+    background-color: black;
     text-align: left;
     display: block;
-    }
+    padding: 10px;
+    margin-top: 40px;
+    outline: 2px solid black;
+    outline-offset: 3px;
+}
 .Onsite{
     text-decoration: none;
 }
-h2{
-    background-color: black;
-    color: white;
-    text-align: center;
-}
 
+
+/* ARTICLE */
 
 article{
     display: block;
+    position: relative;
+    top: -200px;
+    left: 250px;
+    width: 75%;
 }
 h3{
     font-weight: bolder;
     font-style: italic;
+    padding-bottom: 10px;
+}
+article p{
+    padding: 15px;
+}
+
+/* FOOTER */
+footer{
+    text-align: end;
+    color: #f8e12e;
+    background-color: black;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    text-transform: uppercase bolder;
 }
