--- a/assets/styles/Style1.css
+++ b/assets/styles/Style1.css
@@ -3,7 +3,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-
 }
 html{
     background: rgb(33,25,21);
@@ -12,7 +11,6 @@ html{
 }
 
 /* HEADER */
-
 .titulo{
     /* TITULO */
     color:#f8e12e;
@@ -26,12 +24,11 @@ html{
     background-position-y: -200px;
 }
 .logo{
+    object-fit: contain;
     position: absolute;
     top: 250px; 
     left: 80%;
     height: 200px;
-    object-fit: contain;
-    
 }
 h2{
     background-color: black;
@@ -43,12 +40,12 @@ h2{
 
 
 /* NAV */
-
 nav{
     width: 150px;
     display: block;
 }
 nav a{
+    font-weight: bolder;
     color: #f8e12e;
     background-color: black;
     text-align: left;
@@ -60,6 +57,10 @@ nav a{
 }
 .Onsite{
     text-decoration: none;
+    
+    color: black;
+    outline: 2px solid #f8e12e;
+    background-color: #f8e12e;
 }
 
 
