--- a/assets/styles/Style2.css
+++ b/assets/styles/Style2.css
@@ -4,7 +4,20 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+html{
+    background: rgb(33,25,21);
+    background: linear-gradient(180deg, rgba(33,25,21,1) 5%, rgba(55,122,114,1) 13%, rgba(141,232,221,1) 100%);
+    background-attachment: fixed;
+}
 
+.titulo{
+    /* TITULO */
+    color:#f8e12e;
+    font-size: 100px;
+    -webkit-text-stroke: 2px #c63939;
+    text-transform: uppercase;
+    padding-bottom: 240px;
+}
 .logo{
     object-fit: contain;
     position: absolute;
