--- a/assets/styles/Style1.css
+++ b/assets/styles/Style1.css
@@ -5,8 +5,9 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 html{
+    background: fixed;
     background: rgb(33,25,21);
-    background: linear-gradient(180deg, rgba(33,25,21,1) 5%, rgba(55,122,114,1) 13%, rgba(141,232,221,1) 100%);
+    background: linear-gradient(180deg, rgb(0, 0, 0) 45%, rgba(55,122,114,1) 60%, rgba(141,232,221,1) 100%);
     background-attachment: fixed;
 }
 
@@ -14,14 +15,17 @@ html{
 .titulo{
     /* TITULO */
     color:#f8e12e;
-    font-size: 100px;
+    font-size: 75px;
     -webkit-text-stroke: 2px #c63939;
+    text-shadow: -2px -2px 1px #000;
     text-transform: uppercase;
-    padding-bottom: 240px;
-    /* FONDO */
-    background-image: url(../img/design1_image1.jpg);
-    background-size:cover;
-    background-position-y: -200px;
+    position: fixed;
+}
+
+figure .imagenestilo2{
+    height: 350px;
+    width: 2000px;
+    object-fit: cover;
 }
 .logo{
     object-fit: contain;
@@ -37,9 +41,7 @@ h2{
     padding: 10px;
     text-transform: uppercase;
 }
-.imagenestilo2{
-    display: none;
-}
+
 
 
 /* NAV */
@@ -60,7 +62,6 @@ nav a{
 }
 .Onsite{
     text-decoration: none;
-    
     color: black;
     outline: 2px solid #f8e12e;
     background-color: #f8e12e;
@@ -75,6 +76,8 @@ article{
     top: -200px;
     left: 250px;
     width: 75%;
+    color: #f8e12e;
+    text-shadow: 2px 2px 1px #000;
 }
 h3{
     font-weight: bolder;
@@ -94,5 +97,5 @@ footer{
     bottom: 0;
     width: 100%;
     height: 20px;
-    text-transform: uppercase bolder;
+    font-weight: bolder;
 }
