--- a/assets/styles/Style2.css
+++ b/assets/styles/Style2.css
@@ -19,14 +19,13 @@ html{
 }
 .imagenestilo2{
     height: 250px;
-    width:100%;
+    width: 2000px;
     object-fit: cover;
-    
 }
 .logo{
     object-fit: contain;
     position:absolute;
-    top: 300px; 
+    top: 350px; 
     height: 200px;
 }
 h2{
@@ -44,19 +43,21 @@ nav{
     width: 300px;
     display: inline;
     position: absolute;
+    top: 50px;
+    right: 100px;
 }
 nav a{
     font-weight: bolder;
-    color: #f8e12e;
-    background-color: grey;
+    color: white;
+    background-color: darkcyan;
     padding: 10px;
+    outline: 2px solid black;
 }
 .Onsite{
     text-decoration: none;
-    
     color: black;
-    outline: 2px solid #f8e12e;
-    background-color: #f8e12e;
+    outline: 2px solid black;
+    background-color: greenyellow;
 }
 
 
@@ -67,7 +68,8 @@ article{
     position: relative;
     left: 250px;
     width: 75%;
-    color: white;
+    color: #f8e12e;
+    text-shadow: 2px 2px 1px #000;
 }
 h3{
     font-weight: bolder;
