--- a/assets/styles/StyleFlex.css
+++ b/assets/styles/StyleFlex.css
@@ -4,3 +4,52 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+/* HEADER */
+
+header{
+    display: flex; 
+    /* TEXTO */
+    color:#f8e12e;
+    -webkit-text-stroke: 2px #c63939;
+    text-shadow: -2px -2px 1px #000;
+    text-transform: uppercase;
+}
+.logo{
+    justify-self: center;
+    width: 300px;
+}
+
+/* NAV */
+nav{
+    display: flex;
+    justify-content: space-evenly;
+}
+nav a{
+    /* Letras */
+    font-weight: bolder;
+    color: #f8e12e;
+    background-color: black;
+    outline: 2px solid black;
+    outline-offset: 3px;
+    padding:15px 100px;
+}
+.Onsite{
+    text-decoration: none;
+    color: black;
+    outline: 2px solid #f8e12e;
+    background-color: #f8e12e;
+}
+
+/* ARTICLE */
+article{
+    display: flex;
+    flex-direction: column;
+}
+
+/* FOOTER */
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
