--- a/assets/styles/StyleFlex.css
+++ b/assets/styles/StyleFlex.css
@@ -9,30 +9,54 @@
 
 header{
     display: flex; 
-    /* TEXTO */
+    justify-content: space-between;
+    height:fit-content;
+    /* Texto */
+    text-shadow: 10px 5px 5px #000;
+    text-transform: uppercase;
+    /* Fondo */
+    background-image: url(../img/design1_image2.jpg);
+    background-position-y: 25%;
+}
+header h1{
     color:#f8e12e;
     -webkit-text-stroke: 2px #c63939;
-    text-shadow: -2px -2px 1px #000;
-    text-transform: uppercase;
+    font-size: 75px;
+    margin-bottom: 15%;
+}
+.tab{
+    color: #000;
+    -webkit-text-stroke: 1px #f8e12e;
+    align-self: flex-end;
+    font-size: 35px;
 }
 .logo{
-    justify-self: center;
+    position: absolute;
     width: 300px;
+    display: none;
 }
 
 /* NAV */
 nav{
     display: flex;
-    justify-content: space-evenly;
+    width:auto;
 }
 nav a{
+    width: 0px;
+    flex-grow: 1;
+    object-fit: cover;
+    transition: .5s ease;
     /* Letras */
     font-weight: bolder;
     color: #f8e12e;
     background-color: black;
-    outline: 2px solid black;
-    outline-offset: 3px;
-    padding:15px 100px;
+    padding:15px 10px;
+    text-align: center;
+}
+nav a:hover{
+    width: 150px;
+    opacity: 1;
+    filter:contrast(120%);
 }
 .Onsite{
     text-decoration: none;
@@ -42,14 +66,16 @@ nav a{
 }
 
 /* ARTICLE */
-article{
-    display: flex;
-    flex-direction: column;
-}
+
 
 /* FOOTER */
 footer{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+    color: #f8e12e;
+    background-color: black;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    font-weight: bolder;
+    text-align: right;
 }
