--- a/assets/styles/StyleFlex.css
+++ b/assets/styles/StyleFlex.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+html{
+    background-color: rgb(63, 63, 63);
+}
 
 /* HEADER */
 
@@ -24,19 +27,34 @@ header h1{
     font-size: 75px;
     margin-bottom: 15%;
 }
+    /* Subtitulo */
 .tab{
     color: #000;
     -webkit-text-stroke: 1px #f8e12e;
     align-self: flex-end;
     font-size: 35px;
 }
+    /* Logo */
 .logo{
     position: absolute;
-    width: 300px;
-    display: none;
+    width: 15%;
+    right: 0px;
+    transition: .8s ease;
+    border-top-left-radius: 400px 200px;
+    border-top-right-radius: 400px 200px;
+    border-bottom-left-radius: 400px 200px;
+    border-bottom-right-radius: 400px 200px;
+    background-color: black
+}
+.logo:hover{
+    transform: translate(-300px,150px) scale(2,2);
+    filter:contrast(120%);
+    background-color: transparent;
+    
 }
 
 /* NAV */
+
 nav{
     display: flex;
     width:auto;
@@ -54,7 +72,7 @@ nav a{
     text-align: center;
 }
 nav a:hover{
-    width: 150px;
+    width: 120px;
     opacity: 1;
     filter:contrast(120%);
 }
@@ -65,19 +83,83 @@ nav a:hover{
     background-color: #f8e12e;
 }
 
-/* ARTICLE */
-    li{
-        margin: 10px;
-    }
+/* BODY */
+main{
+    flex-direction: column;
+    flex: 1;
+}
+section{
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    flex: 1;
+    color: white;
+}
 
-/* FOOTER */
-footer{
+section h3{
+    padding: 10px;
+    color: #fce00b;
+}
+    
+
+/* INDEX & ABOUT */
+.index, .contact, .about{
+    flex-direction: column;  
+}
+.index p,.contact p, .about p, .game-information p{
+    padding: 10px 10px 10px 50px;
+}
+
+/* Calendario */
+table, thead, tr, th, td{
+    border: rgb(192, 192, 192) 2px solid;
+    border-collapse: collapse;
+    padding: 15px;
+}
+th{
     color: #f8e12e;
-    background-color: black;
+}
+.game-information{
+    flex-direction: column;
+}
+
+.Contactos{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+/* Rules */
+.rules{
+    flex-direction: column;
+    padding: 10px;
+}
+.rules p{
+    text-indent: 40px;
+}
+li{
+    margin: 10px;
+}
+.list-letras{
+    list-style: lower-latin;
+}
+.list-allplay{
+    padding-left: 50px;
+    list-style: circle;
+}
+
+.negrita{
+    font-weight: bolder;
+}
+/* FOOTER */
+
+footer{
     position: fixed;
     bottom: 0;
-    width: 100%;
-    height: 40px;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    background-color: #000;
+    width: 100%; 
+    height: 20px;
     font-weight: bolder;
-    text-align: right;
 }
