--- a/assets/styles/Style.css
+++ b/assets/styles/Style.css
@@ -195,8 +195,8 @@ form{
     justify-content: stretch;
 }
 .form-text input{
-    width: 1000%;
     height: fit-content;
+    flex-grow: 1;
 }
 .form-permiso{
     padding: 30px;
